--- a/ios11新特性/ios11新特性/Base.lproj/Main.storyboard
+++ b/ios11新特性/ios11新特性/Base.lproj/Main.storyboard
@@ -25,54 +25,44 @@
             </objects>
             <point key="canvasLocation" x="937" y="-179"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="8mL-cI-bi4">
-            <objects>
-                <tableViewController id="NpR-w6-fIx" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="paX-eX-Foq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.1333333333" green="0.81568627449999997" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="215" id="NPT-ok-QUE">
-                                <rect key="frame" x="0.0" y="28" width="375" height="215"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NPT-ok-QUE" id="1r6-eC-uTj">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="214.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="NpR-w6-fIx" id="qR3-l7-4Yh"/>
-                            <outlet property="delegate" destination="NpR-w6-fIx" id="qKd-xZ-tLf"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="ewE-F3-jOK"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ghS-hS-7HZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="837.60000000000002" y="660.71964017991013"/>
-        </scene>
         <!--第二-->
         <scene sceneID="0aD-OU-Xw7">
             <objects>
                 <navigationController id="Bdy-OS-IAD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="第二" image="icon_customer01" selectedImage="icon_customer02" id="Mly-kY-aj0"/>
+                    <tabBarItem key="tabBarItem" title="第二" image="icon_customer01" landscapeImage="icon_customer01" largeContentSizeImage="icon_customer01" selectedImage="icon_customer02" id="Mly-kY-aj0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ezr-tj-oGe">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <connections>
+                        <segue destination="9Qk-8Z-5BH" kind="relationship" relationship="rootViewController" id="g9o-YP-7Dy"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rlk-tZ-hIH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-30" y="630"/>
         </scene>
+        <!--Second View Controller-->
+        <scene sceneID="Ldv-TT-Syw">
+            <objects>
+                <viewController id="9Qk-8Z-5BH" customClass="SecondViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZX2-JI-rDA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.1333333333" green="0.81568627449999997" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="5b7-gD-xc3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="scq-ah-B01"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x9N-dr-w67" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="778" y="629"/>
+        </scene>
         <!--第一-->
         <scene sceneID="Eu2-gp-hAJ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="huI-26-qLn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="第一" image="icon_index01" selectedImage="icon_index02" id="QqH-tg-mrF">
+                    <tabBarItem key="tabBarItem" title="第一" image="icon_index01" landscapeImage="icon_index01" largeContentSizeImage="icon_index01" selectedImage="icon_index02" id="QqH-tg-mrF">
                         <color key="badgeColor" red="0.59999999999999998" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBarItem>
                     <toolbarItems/>
